# dfasat

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  INSTALL_PYTHON  Makefile  README.md  apta.cpp  batch-alergia.ini  batch-alergia94.ini  batch-overlap.ini  bitbucket-pipelines.yml  collector.sh  dfasat.cpp  evaluate.cpp  generate.py  inputdata.cpp  interactive-4logs.ini  interactive-mealy.ini  interactive.sh  json_visualizer.html  main.cpp  parameters.cpp  quick.ini  random_greedy.cpp  redo.sh  refinement.cpp  show.sh  start-interactive.sh  start.sh  state_merger.cpp  travis.yml
data/examples/: 1_test_split.txt  KSPIswap_longtrace.txt  KSPIswap_splittrace.txt  LIT101_sensor_train.txt  TSP_BR17_10000.txt  TSP_BR17_10000random_samestartingcity.txt  Untitled  abnormal_sequences.csv  bpi_12.spice  dfasat.cbp  junming_data.txt  nasa_complete.spice  normal_sequences.csv  pmyfile2.updated  receipt_phase.spice  sepsis.spice  traces100.txt  traces1000.txt  wordlist.abbadingo  words_teckping.txt  words_teckping2.txt
demos/: flexfringe tutorial.ipynb
doc/html/: aike_8h_source.html  alergia94_8h_source.html  alergia_8h_source.html  annotated.html  apta_8h_source.html  classapta-members.html  classapta.html  classapta.js  classapta__coll__graph.map  classapta__coll__graph.md5  classapta__node-members.html  classapta__node.html  classapta__node.js  classapta__node__coll__graph.md5  classes.html  classevaluation__data-members.html  classevaluation__data.html  classevaluation__data.js  classevaluation__data__coll__graph.map  classevaluation__data__coll__graph.md5  classevaluation__function-members.html  classevaluation__function.html  classevaluation__function.js  classextend__refinement-members.html  classextend__refinement.html  classextend__refinement.js  classextend__refinement__coll__graph.map  classextend__refinement__coll__graph.md5  classextend__refinement__inherit__graph.md5  classmerge__refinement-members.html  classmerge__refinement.html  classmerge__refinement.js  classmerge__refinement__coll__graph.map  classmerge__refinement__coll__graph.md5  classmerge__refinement__inherit__graph.md5  classrefinement-members.html  classrefinement.html  classrefinement.js  classrefinement__coll__graph.map  classrefinement__coll__graph.md5  (+72 more)
doc/html/search/: all_1.js  all_2.js  all_6.js  all_9.js  all_c.js  files_0.js  functions_2.js  searchdata.js  variables_2.js  variables_5.js  variables_6.js  variables_7.js
doc/latex/: classapta.tex  classapta__coll__graph.md5  classapta__node.tex  classapta__node__coll__graph.md5  classevaluation__data.tex  classevaluation__data__coll__graph.md5  classevaluation__function.tex  classextend__refinement.tex  classextend__refinement__coll__graph.md5  classextend__refinement__inherit__graph.md5  classmerge__refinement.tex  classmerge__refinement__coll__graph.md5  classmerge__refinement__inherit__graph.md5  classrefinement.tex  classrefinement__coll__graph.md5  classrefinement__inherit__graph.md5  dfasat_8cpp.tex  dfasat_8cpp__incl.md5  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.tex  dir_d03c17837063fadb2a37b06b64eb042b.tex  files.tex  interactive_8cpp.tex  interactive_8cpp__incl.md5  main_8cpp.tex  main_8cpp__incl.md5  refman.tex  structscore__compare.tex
docs/: CMakeLists.txt  Doxyfile.in  conf.py  documentation_base.rst  index.rst
docs/code_docs/: documentation_base.rst  documentation_evaluation.rst
docs/tutorials/: first_parameters.md  getting-started.md  probabilistic_automata.md
evaluation/: nino.cpp  num_count.cpp  num_count.h  rti+.cpp  rti+.h
ini/: batch-4logs.ini  batch-aegon.ini  batch-alergia.ini  batch-alergia94.ini  batch-conflict.ini  batch-likelihood.ini  batch-mealy.ini  batch-overlap.ini  batch-process.ini  batch.ini  humanloop-interactive.ini  interactive-overlap.ini  process.ini  rti.ini  spice.ini
lib/: apta.h  evaluate.h  inputdata.h  json.hpp  refinement.h  state_merger.h
pypackage/: .gitignore  .travis.yml  INSTALL  MANIFEST.in  README.md  circle.yml  dependencies.txt  requirements.txt  setup.py  setup.txt  test.py  train_toy.txt
pypackage/doc/: api.rst  conf.py  index.rst  template.rst
pypackage/examples/: plot_template.py
pypackage/flexfringe/: __init__.py  estimators.py  eval.py  example.py
source/: CMakeLists.txt  apta.cpp  apta.h  conflict_graph.cpp  dfasat.cpp  dfasat.h  evaluators.h  inputdata.cpp  inputdata.h  interactive.cpp  interactive.h  main.cpp  mem_store.cpp  mem_store.h  parameters.cpp  parameters.h  random_greedy.cpp  random_greedy.h  refinement.cpp  refinement.h  searcher.cpp  searcher.h  state_merger.cpp  state_merger.h  stream.cpp  stream.h
source/devel/: dfasat.cpp  evaluate.cpp  evaluate.h  random_greedy.cpp  state_merger.cpp
source/evaluation/: .num_count.cpp.swp  CMakeLists.txt  aike.cpp  aike.h  alergia.cpp  alergia.h  alergia94.cpp  alergia94.h  conflict-driven-edsm.cpp  conflict-driven-edsm.h  conflict-driven-overlap.cpp  conflict-driven-overlap.h  conflict-driven.cpp  conflict-driven.h  depth-driven.cpp  depth-driven.h  evaluate.cpp  evaluate.h  evidence-driven.cpp  evidence-driven.h  fixed_depth_regression.cpp  fixed_depth_regression.h  full-overlap-driven.cpp  full-overlap-driven.h  kldistance.cpp  kldistance.h  likelihood.cpp  likelihood.h  mealy.cpp  mealy.h  mse-error.cpp  mse-error.h  num_count.cpp  num_count.h  overlap-driven.cpp  overlap-driven.h  overlap4logs.cpp  overlap4logs.h  process-mining.cpp  process-mining.h  (+4 more)
source/evaluation/2refactor/: conflict_driven.cpp  fixed_depth_regression.cpp  metric-driven.cpp  mse-error.cpp  series-driven.cpp
source/evaluation/devel/: conflict-driven-bits.cpp  conflict-driven-bits.h  metric-driven.cpp  metric-driven.h  mse-error.cpp  nino.cpp  nino.h  old_code.cpp  series-driven.cpp  series-driven.h
source/new_code/: depth_driven.cpp  depth_driven.h  evidence_driven.cpp  evidence_driven.h  mealy.cpp  sinks.cpp
source/space-saving/: Makefile  readme.txt
source/space-saving/src/: hash-map.cpp  hash-map.h  hasher.cpp  hasher.h  runner.cpp  space-saving.cpp  space-saving.h
test/: final.sh
tests/: tail.cpp  tests.cpp
(+2 files in other folders)
