add_library(Evaluation STATIC
            aike.cpp
            aike.h
            alergia.cpp
            alergia.h
            alergia94.cpp
            alergia94.h
            conflict-driven-edsm.cpp
            conflict-driven-edsm.h
            conflict-driven-overlap.cpp
            conflict-driven-overlap.h
            conflict-driven.cpp
            conflict-driven.h
            depth-driven.cpp
            depth-driven.h
            evaluate.cpp
            evaluate.h
            evidence-driven.cpp
            evidence-driven.h
            fixed_depth_regression.cpp
            fixed_depth_regression.h
            full-overlap-driven.cpp
            full-overlap-driven.h
            kldistance.cpp
            kldistance.h
            likelihood.cpp
            likelihood.h
            mealy.cpp
            mealy.h
            mse-error.cpp
            mse-error.h
            num_count.cpp
            num_count.h
            overlap-driven.cpp
            overlap-driven.h
            overlap4logs.cpp
            overlap4logs.h
            process-mining.cpp
            process-mining.h
            rti+.cpp
            rti+.h
            tsp.cpp
            tsp.h
            )